python-apt (0.8.1) UNRELEASED; urgency=low

  * Breaks: debsecan (<< 0.4.15) [not only << 0.4.14] (Closes: #629512)

 -- Julian Andres Klode <jak@debian.org>  Tue, 07 Jun 2011 14:00:22 +0200

python-apt (0.8.0) unstable; urgency=low

  * Upload to unstable

  [ Julian Andres Klode ]
  * Increase Breaks for update-notifier to 0.99.3debian9
  * utils/get_debian_mirrors.py: Adjust for new Alioth SCM urls
  * debian/control: Standards-Version 3.9.2
  * Fix Lintian overrides
  * Fix spelling errors reported by Lintian (sep[a->e]rated, overrid[d]en)
  * po/urd.po: Remove, ur.po is the correct file
  * debian/source/format: Add, set it to "3.0 (native)"

  [ Tshepang Lekhonkhobe ]
  * Fix get_changelog in Python 3 (Closes: #626532)
  * apt/package.py: fix a few typos [formated->formatted] (Closes: #597054)
  * doc/source/tutorials/contributing.rst: minor improvements (Closes: #625225)
    - one typo [2to => 2to3], one broken link [pep8.py link]

  [ Translation updates ]
  * Esperanto (Closes: #626430)

 -- Julian Andres Klode <jak@debian.org>  Fri, 27 May 2011 16:12:46 +0200

python-apt (0.8.0~exp4) experimental; urgency=low

  * apt_pkg: Add OrderList, wanted for mancoosi (Closes: #623485)
  * apt_pkg: Add subclassing fun to PackageManager, for #623485 as well
  * apt.cache: Emit change signals in ProblemResolver
  * apt.Cache: Add a _changes_count member for later use

 -- Julian Andres Klode <jak@debian.org>  Fri, 29 Apr 2011 13:57:30 +0200

python-apt (0.8.0~exp3) experimental; urgency=low

  [ Stéphane Graber ]
  * Update enable_component to also apply to -src entries (LP: #758732)
  
  [ Julian Andres Klode ]
  * apt_pkg: Add apt_pkg.Version.multi_arch and friends

 -- Julian Andres Klode <jak@debian.org>  Thu, 21 Apr 2011 15:33:38 +0200

python-apt (0.8.0~exp2) experimental; urgency=low

  * aptsources: Parse multi-arch sources.list files correctly
  * aptsources: Allow insertion of new multi-arch entries
  * aptsources: Various cleanup work