@@ -1,6 +1,14 @@
 python-apt (0.8.1) UNRELEASED; urgency=low
 
+  [ Julian Andres Klode ]
   * Breaks: debsecan (<< 0.4.15) [not only << 0.4.14] (Closes: #629512)
+  
+  [ Michael Vogt ]
+  * python/arfile.cc:
+    - use APT::Configuration::getCompressionTypes() instead of duplicating
+      the supported methods here
+  * tests/test_debfile.py:
+    - add test for raise on unknown data.tar.xxx
 
  -- Julian Andres Klode <jak@debian.org>  Tue, 07 Jun 2011 14:00:22 +0200
 
